# vbot

./: .env.example  .gitattributes  .gitignore  AGENTS copy.md  AGENTS.md  AGENTS.override.md  CHANNELS-HANDOFF.md  CLAUDE.md  EXTENSIONS.md  GOALS.md  HANDOFF-HA.md  HANDOFF-TELEGRAM.md  HANDOFF.md  LICENSE  MAIN.md  PHASE3-SPEC.md  PLAN.md  README.md  REFACTOR-HANDOFF.md  ROADMAP.md  RULES.md  STRUCTURE.md  TOOLS-VISION.md  USAGE.md  V2.md  handoff.md  handoff2.md  handoff3.md  pyproject.toml
.github/workflows/: release.yml
.opencode/agents/: builder.md  orchestrator.md  planner.md  reviewer.md
.vorch/: CREATE-SPEC.md  DESIGN.md  FLAGGED.md  GLOSSARY.md  PROJECT.md  TESTER.md  design.html
.vorch/domain-maps/: agent.md  attachments.md  automation.md  channels.md  chat.md  cli.md  compaction.md  debug.md  desktop.md  extensions.md  logs.md  memory.md  model_tasks.md  models.md  projects.md  prompts.md  providers.md  recall.md  runs.md  runtime.md  server.md  sessions.md  settings.md  skills.md  statistics.md  storage.md  subagents.md  tools.md  webui.md
.vorch/plans/: model-command.md  projekte-1-kern-cli.md  projekte-2-webui-desktop.md  subagent-no-async-parking-at-depth.md
.vorch/researches/: conversation-compaction-landscape.md  openclaw-channels-sessions-telegram.md  openclaw-messaging.md  opencode-go-copilot-vscode-provider.md  opencode-go-minimax-reasoning.md
.vorch/specs/: agent.md  attachments.md  automation.md  channels.md  chat.md  cli.md  compaction.md  debug.md  desktop.md  embeddings.md  extensions.md  image.md  logs.md  memory.md  model_tasks.md  models.md  prompts.md  providers.md  recall.md  runs.md  runtime.md  server.md  sessions.md  settings.md  skills.md  speech.md  storage.md  subagents.md  tools.md  webui.md
.vorch/workflows/: CREATE-DESIGN.md  CREATE-SPEC.md  branch-workflow.md  domain-map-workflow.md  release-workflow.md  spec-workflow.md  worktree-workflow.md
cli/: agent_management.py  autostart_management.py  channel_management.py  config_management.py  cron_management.py  debug_management.py  doctor_management.py  extensions_management.py  log_management.py  main.py  model_management.py  parser.py  project_management.py  prompt_management.py  provider_management.py  rpc_client.py  server_management.py  session_management.py  skill_management.py  task_model_management.py  tool_management.py  update_management.py
core/: search_config.py
core/agents/: __init__.py  agents.py
core/attachments/: __init__.py  attachments.py
core/automation/: __init__.py  automation.py  cron.py
core/channels/: __init__.py  adapter.py  channels.py  discord.py  engine.py  telegram.py
core/chat/: __init__.py  block_resolver.py  chat.py  commands.py  compaction.py  content_blocks.py  errors.py  events.py  messages.py  model_resolution.py  runs.py  streaming.py  tool_dispatch.py
core/compaction/: __init__.py  compaction.py
core/debug/: __init__.py  recorder.py  redaction.py  store.py
core/embeddings/: __init__.py  embeddings.py  providers.py
core/extensions/: __init__.py  extensions.py
core/image/: __init__.py  image.py  providers.py  types.py
core/memory/: __init__.py  memory.py
core/model_tasks/: __init__.py  artifacts.py  constants.py  embeddings.py  embeddings_providers.py  image.py  image_providers.py  local_targets.py  model_tasks.py  options.py  speech.py  speech_local.py  speech_providers.py  speech_types.py  task_execution.py
core/models/: __init__.py  assembly.py  discovery.py  models.py  models_dev.py  query.py  validation.py
core/projects/: __init__.py  address.py  paths.py  projects.py  store.py  (+2 more)
desktop/: connection.py  main.py  settings.py
docs/: extensions.md
onboarding/: ONBOARDING.md
scripts/: README-worktree.md  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  quality-frontend.py  quality.py  test-env.py  uninstall.ps1  uninstall.sh  validate_model_db.py  worktree.py
server/: __init__.py  app.py  clients.py  delegates.py  events.py  main.py
stuff/: handoff.md
tests/: conftest.py  test_runtime.py
webui/: eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  vite.config.js
(+713 files in other folders)
