[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vbot"
version = "0.1.0"
description = "A local-first agent harness: an async Python runtime giving AI agents a workspace, persistent state, host tool access, and server/WebUI/desktop/CLI accessors."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "The vBot Authors" }]
keywords = ["ai", "agent", "llm", "agentic", "fastapi", "svelte", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = ["httpx", "pyyaml", "croniter", "tzdata", "beautifulsoup4", "sqlite-vec>=0.1.9,<0.2"]

[project.scripts]
vbot = "cli.main:main"

[project.optional-dependencies]
server  = ["fastapi", "uvicorn[standard]", "websockets", "watchfiles", "python-telegram-bot", "discord.py>=2.7,<3", "python-multipart"]
cli     = ["rich", "psutil"]
desktop = ["pywebview", "openwakeword"]
dev     = ["pytest", "pytest-asyncio", "ruff", "mypy", "hatchling", "pytest-xdist", "pytest-timeout", "respx", "fastapi", "uvicorn[standard]", "websockets", "watchfiles", "python-telegram-bot", "discord.py>=2.7,<3", "python-multipart", "psutil"]

[tool.hatch.build.targets.wheel]
packages = ["core", "server", "cli", "desktop"]

[tool.pytest.ini_options]
addopts = "-n auto --timeout=30 --import-mode=importlib"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
